@@ -302,6 +302,10 @@ AC_ARG_WITH(plugins,
 
 AC_SUBST(GST_PLUGINS_SELECTED)
 
+dnl Check for mmap (needed by electricfence plugin)
+AC_FUNC_MMAP()
+AM_CONDITIONAL(GST_HAVE_MMAP, test "x$ac_cv_func_mmap_fixed_mapped" == "xyes")
+
 dnl ==========================================================================
 dnl ============================= sys plug-ins ================================
 dnl ==========================================================================
